--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -1,8 +1,17 @@
 #responsive-nav{
     position: fixed;
     top: 0;
-    right: 0;
-    height: 500px;
-    width: 300px;
-    background-color:white;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    .cat-li{
+        position:relative;
+        
+        .subcat-ul{
+            position:absolute;
+            left: 100%;
+            z-index: 100;
+            width: 250px;
+        }
+    }
 }
