--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -5,13 +5,15 @@
     height: 100%;
     width: 100%;
     .cat-li{
-        position:relative;
+        list-style: none;
+        font-size:16px;
+        font-weight: 500;
+        color:green;
         
         .subcat-ul{
-            position:absolute;
-            left: 100%;
-            z-index: 100;
-            width: 250px;
+            font-size:16px;
+            font-weight: 500;
+            color:rgb(69, 72, 77);
         }
     }
 }
